--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    // Support ← Behövs för att kunna använda recycler view.
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    // ViewModel ← Behövs för att kunna använda ViewModel och LiveData
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.0'
 }
