--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
 
         <activity android:name=".screen.categories.CategoriesActivity" />
 
+        <activity android:name=".screen.quiz.QuizActivity" />
+
         <activity android:name=".screen.endofgame.EndOfGameActivity" />
 
     </application>
